--- a/docs/docs/styles.css
+++ b/docs/docs/styles.css
@@ -122,6 +122,12 @@ pre {
     overflow-y: visible !important;
     max-width: calc(100%) !important;
     overflow-x: auto !important;
+    margin: 0px !important;
+}
+
+:not(pre) code{
+    background: #474949 !important;
+    display: inline !important;
 }
 
 th {
@@ -131,4 +137,7 @@ th {
 table * {
     text-align: center;
     white-space: nowrap;
+}
+table {
+    margin: 10px 0px !important;
 }
